--- a/src/template/index.pug
+++ b/src/template/index.pug
@@ -6,11 +6,11 @@ html(lang="en")
     meta(name='viewport', content='width=device-width, initial-scale=1, shrink-to-fit=no')
     link(rel='stylesheet', href='https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css', integrity='sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm', crossorigin='anonymous')
     link(rel="shortcut icon" href="img/icon-site.ico" type="image/x-icon")
-    //- link(rel='stylesheet', href='style/animate.css')
+    link(rel='stylesheet', href='style/animate.css')
     link(rel='stylesheet', href='style/main.css')
-    //- script(src='js/WOW-20848c410fe32d161c2330e1d261b59512094f81/dist/wow.js')
+    script(src='./js/WOW-master/dist/wow.js')
     script.
-      //- new WOW().init();
+      new WOW().init();
 
   body(data-spy="scroll" data-target="#navbar-scroll")
     header
@@ -33,15 +33,15 @@ html(lang="en")
       section.intro.text-center.container-fluid.d-table.h-100
         .d-table-cell.align-middle
           .container
-            span.intro-logo.text-white LAMR
+            span.intro-logo.d-inline-block.text-white.wow.bounceIn LAMR
 
 
-    section#portfolio.container-fluid.mt-5
+    section#portfolio.container-fluid.mt-5.wow.fadeIn
       .container
         .text-center
           h2 Portfolio
           p Just my work
-        .row.d-flex.justify-content-around
+        .row.d-flex.justify-content-around.wow.fadeIn
           .card.col-md-4.text-center.p-0
             img.card-img-top(src='img/famous-people.png', alt='famous-people')
             .card-body
@@ -107,37 +107,81 @@ html(lang="en")
                     | Curabitur ornare sapien est, eget condimentum nisl maximus eu. Integer sed sapien sed erat efficitur luctus. Proin venenatis velit a nisl porttitor varius. In vestibulum ut mauris vel porttitor. Morbi ac augue at nunc commodo imperdiet consequat at nunc. Vivamus egestas dignissim tellus ut facilisis. Sed sapien erat, lacinia in porta id, hendrerit quis ipsum. Maecenas ipsum nisl, pulvinar quis vulputate vitae, bibendum non tellus. Ut posuere eget velit laoreet eleifend. Pellentesque ullamcorper vulputate hendrerit.
                   a.btn.btn-info.text-white.w-100 Go to site
 
-    section.bg-2.h-100
-      .container-fluid.d-table.text-white.h-100
-        .align-middle.d-table-cell.w-100
-          h2.pt-5.mb-5.text-center Progress skill
-          .container
-            .box-progressSkill
-              h3 HTML
-              .progress
-                .progress-bar.w-75(role='progressbar', aria-valuenow='70', aria-valuemin='0', aria-valuemax='100') 75%
-            .box-progressSkill
-              h3 CSS
-              .progress
-                .progress-bar.w-75.bg-danger(role='progressbar', aria-valuenow='70', aria-valuemin='0', aria-valuemax='100') 75%
-            .box-progressSkill
-              h3 JS
-              .progress
-                .progress-bar.w-25.bg-warning(role='progressbar', aria-valuenow='15', aria-valuemin='0', aria-valuemax='100') 25%
+    section#technology.container-fluid.wow.fadeIn
+      h2.pt-5.mb-5.text-white.text-center Used technologies in projects
+      .row.d-flex.justify-content-around.h-100
+
+        .card.col-md-5.col-10.p-0.mt-5
+          img.card-img-top(src='./img/gulp.png', alt='gulp')
+          .card-body.d-flex.flex-column.justify-content-between
+            h5.card-title Gulp
+            p.card-text.
+              Automate and enhance your workflow. I use plugins like <b>browser-sync</b>, <b>autoprefixer</b>, <b>gulp-sass</b>, <b>gulp-pug</b>, <b>gulp-postcss</b>, <b>gulp-htmlmin</b>, <b>gulp-uglify</b>, <b>gulp-csso</b>, <b>gulp-clean</b>, <b>gulp-imagemin</b>.
+            a.btn.btn-dark.w-100(href='https://gulpjs.com/') Developers site
+
+        .card.col-md-5.col-10.p-0.mt-5
+          img.card-img-top(src='./img/bootstrap.jpg', alt='bootstrap')
+          .card-body.d-flex.flex-column.justify-content-between
+            h5.card-title Bootstrap
+            p.card-text.
+               Build responsive, mobile-first projects on the web with the world’s most popular front-end component library. Bootstrap is an open source toolkit for developing with HTML, CSS, and JS.
+            a.btn.btn-dark.w-100(href='https://getbootstrap.com/') Developers site
+
+        .card.col-md-5.col-10.p-0.mt-5
+          img.card-img-top(src='./img/pug.jpg', alt='pug')
+          .card-body.d-flex.flex-column.justify-content-between
+            h5.card-title Pug
+            p.card-text.
+              HTML preprocessor and template engine.
+            a.btn.btn-dark.w-100(href='https://pugjs.org/api/getting-started.html') Developers site
+
+        .card.col-md-5.col-10.p-0.mt-5
+          img.card-img-top(src='./img/sass.jpg', alt='sass')
+          .card-body.d-flex.flex-column.justify-content-between
+            h5.card-title Sass
+            p.card-text.
+              Sass is the most mature, stable, and powerful professional grade CSS extension language in the world.
+            a.btn.btn-dark.w-100(href='https://sass-lang.com/') Developers site
+
+
+        .card.col-md-5.col-10.p-0.mt-5
+          img.card-img-top(src='./img/git(hub).jpg', alt='git and github')
+          .card-body.d-flex.flex-column.justify-content-between
+            h5.card-title Git with Github
+            p.card-text.
+              Git is a free and open source distributed version control system designed to handle everything from small to very large projects with speed and efficiency.
+            a.btn.btn-dark.w-100(href='https://git-scm.com/') Developers site
+
+        .card.col-md-5.col-10.p-0.mt-5
+          img.card-img-top(src='./img/jquery.png', alt='jQuery')
+          .card-body.d-flex.flex-column.justify-content-between
+            h5.card-title jQuery
+            p.card-text.
+              jQuery is a fast, small, and feature-rich JavaScript library. It makes things like HTML document traversal and manipulation, event handling, animation, and Ajax much simpler with an easy-to-use API that works across a multitude of browsers.
+            a.btn.btn-dark.w-100(href='https://jquery.com/') Developers site
+        
+        .card.col-md-5.col-10.p-0.mt-5
+          img.card-img-top(src='./img/npm.jpg', alt='gulp')
+          .card-body.d-flex.flex-column.justify-content-between
+            h5.card-title NPM
+            p.card-text.
+              Essential JavaScript development tools that help you go to market faster and build powerful applications using modern open source code.
+            a.btn.btn-dark.w-100(href='https://www.npmjs.com/') Developers site
+            
 
     section#about.text-center.container-fluid.d-table.h-100
       .d-table-cell.align-middle
         .container
-          img.avatar.mt-3(src='img/avatar.jpeg', alt='')
-          h2 About me
-          p
-            | Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla sollicitudin rutrum libero et dapibus. Duis rutrum, elit non egestas placerat, lectus libero posuere lectus, nec consequat sem massa eget dolor. Nulla maximus tristique nibh ut volutpat. Proin dapibus sapien lorem, eu iaculis est porttitor vitae. Cras ornare consectetur sollicitudin.
+          img.avatar.mt-3.wow.zoomIn(src='img/avatar.jpg', alt='myAvatar')
+          h2.wow.fadeIn About me
+          p.wow.fadeIn.
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla sollicitudin rutrum libero et dapibus. Duis rutrum, elit non egestas placerat, lectus libero posuere lectus, nec consequat sem massa eget dolor. Nulla maximus tristique nibh ut volutpat. Proin dapibus sapien lorem, eu iaculis est porttitor vitae. Cras ornare consectetur sollicitudin.
 
-    section#contact.text-center.text-white.container-fluid.d-table.h-100
+    section#contact.text-center.text-white.container-fluid.d-table.h-100.wow.fadeIn
       .d-table-cell.align-middle
         .container
           h2.pt-3.pt-md-0 Contact with me
-          p Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+          p You can contact me in the following ways:
           ul.list-inline.d-flex.flex-column.flex-md-row.justify-content-around
             li
               a#vk.btn.btn-outline-primary.btn-lg.text-white.mb-3.w-100(href='https://vk.com/id157921634') VK
@@ -148,9 +192,17 @@ html(lang="en")
             li
               button#mail.btn.btn-outline-primary.btn-lg.text-white.mb-3.w-100(href='', data-toggle='tooltip', data-placement='bottom', title='denkamanet@mail.ru') Mail
 
-    footer.container-fluid.bg-dark.d-table
-      .container.d-table-cell.align-middle.text-center.text-white
-        span#footerIntro LAMR
+    footer.container-fluid.bg-dark.d-table.wow.fadeIn
+      .container.d-flex.flex-column.text-white.pt-3
+        ul.nav.nav-pills.nav-fill
+              li.nav-item
+                a.nav-link.text-white.ml-1.pr-4.pl-4(href='#portfolio') Portfolio
+              li.nav-item
+                a.nav-link.text-white.ml-1.pr-4.pl-4(href='#about') About
+              li.nav-item
+                a.nav-link.text-white.ml-1.pr-4.pl-4(href='#contact') Contact
+
+        #footerIntro.align-self-center LAMR
 
 
 
