--- a/src/style/sass/main.sass
+++ b/src/style/sass/main.sass
@@ -1,39 +1,13 @@
-@import url('https://fonts.googleapis.com/css?family=Righteous')
-@import url('https://fonts.googleapis.com/css?family=Faster+One')
-// TEST
-@import url('https://fonts.googleapis.com/css?family=Kanit')
-@import url('https://fonts.googleapis.com/css?family=Permanent+Marker')
 
-$logoFont: 'Permanent Marker', cursive
+@import _font.sass
 
 
+// VARIABLES
+@import _var.sass
+// VARIABLES
 
-.preloader
-  position: fixed
-  display: flex
-  justify-content: center
-  align-items: center
-  width: 100%
-  height: 100%
-  background-color: #343a40
-  z-index: 2000
-  transition: 1s all
-  opacity: 1
-  visibility: visible
-  
-  .loader
-    width: 150px
-    height: 150px
-    position: absolute
-    text-align: center
-    color: white
-    font-family: $logoFont
-    font-size: 6rem
-    animation: 1s puls infinite linear
 
-.ready
-  opacity: 0
-  visibility: hidden
+@import _preloader.sass
 
 
 html, body
@@ -140,23 +114,8 @@ footer
   justify-content: center
   align-items: center
 
-@media (min-width: 790px)
 
-  .avatar
-    max-width: 25%
+@import _animation.sass
 
 
-@media (max-width: 790px)
-  #technology
-    background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../img/bg-2.jpg") no-repeat fixed (center / cover)
 
-
-@keyframes puls
-  from
-    color: white
-
-  50%
-    color: #a6a6a6
-
-  to
-    color: white
